...
                      ),
                      ElevatedButton(
                        onPressed: () {
                          Navigation.goBack();
                          controller.reloadComments();
                        },
                        child: const Text("Search"),
                      ),
                    ],
                  ),
                  const SizedBox(height: 16),
                ],
              ),
...
                    if (controller.commentsDisabledForVideo.value) {
                      return Expanded(
                          child: Center(
                        child: Padding(
                          padding: const EdgeInsets.all(8.0),
                          child: Text(
                            "Comments disabled for this video :(",
                            style: textTheme.headlineSmall,
                            textAlign: TextAlign.center,
                          ),
                        ),
                      ));
                    }
...
